@@ -14,6 +14,11 @@
     Easy Peasy!<br><br>
     You can also do a "Search All" that will look for API's using all search actions:<br>
 	<img moz-do-not-send="true" src="gotallapi.png" alt=""><br>
+	<br>
+	You can also set a custom command from the plugin settings dialog like so:<br>
+	<img moz-do-not-send="true" src="setcc.png" alt=""><br>
+	This command will be run asynchronously after replacing "%p" with the currently selected text, no output will be shown in the docviewer window..<br>
+	If you don't want a custom command to apear in the "Find API" menu, leave blank.<br>
 	<br>More info to come ...<br>
   </body>
 </html>
